add github actions

--- a/.github/workflows/terraform_to_aws.yaml
+++ b/.github/workflows/terraform_to_aws.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform
+        working-directory: ./lambda
     steps:
     - uses: actions/checkout@v1
 
