add github actions terragrunt

--- a/.github/workflows/terraform_to_aws.yaml
+++ b/.github/workflows/terraform_to_aws.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     - name: Setup Terragrunt
-      - uses: eLco/setup-terragrunt@v1
+      uses: eLco/setup-terragrunt@v1
     
     - name: Verify Terraform version
       run: terraform --version
