--- a/.github/workflows/terraform_to_aws.yaml
+++ b/.github/workflows/terraform_to_aws.yaml
@@ -7,31 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./**
+        working-directory: ./
     steps:
     - uses: actions/checkout@v1
-
+    
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-
+    
     - name: Setup Terragrunt
       uses: eLco/setup-terragrunt@v1
-    
-    - name: Verify Terraform version
-      run: terraform --version
 
-    - name: Terraform init
+    - name: Terragrunt apply all
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform init 
-
-    - name: Terraform validation 
-      run: terraform validate
-
-
-    - name: Terraform apply
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform apply -auto-approve -input=false
+      run: terragrunt apply-all --terragrunt-non-interactive
